--- a/CursoSoftex.ipynb
+++ b/CursoSoftex.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CursoSoftex.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUeGS0H1Q+x9zB3TElJzzo",
+      "authorship_tag": "ABX9TyM+8JNTsE73dcEKwkh5meEF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
       },
       "outputs": [],
       "source": [
+        "\n",
         "n1= float (input (\"Digite o primeiro número: \"))\n",
         "n2= float (input (\"Digite o segundo número: \"))\n",
         "operador = float(input('Digite o operador, sendo adição 1, subtração 2, multiplicação 3, divisão 4: '))\n",
@@ -54,6 +55,21 @@
         "resultado=calculadora(n1,n2,operador)\n",
         "print('o resultado é:',resultado)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faça uma função calculadora de dois números com três parâmetros: os dois primeiros serão os números da operação e o terceiro será a entrada que definirá a operação a ser executada. Considera a seguinte definição:\n",
+        "1. Soma\n",
+        "2. Subtração\n",
+        "3. Multiplicação\n",
+        "4. Divisão\n",
+        "\n",
+        "Caso seja inserido um número de operação que não exista, o resultado deverá ser 0.\n"
+      ],
+      "metadata": {
+        "id": "KJdaP-crwCV5"
+      }
     }
   ]
 }
