--- a/10_EX_Programação.ipynb
+++ b/10_EX_Programação.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "10_EX_Programação.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6HYKI27Y5mgXyNJhTkaF2",
+      "authorship_tag": "ABX9TyNizsIEex1tTQD6cVqcNTHB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,41 +31,51 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8a7qb30vS8p0"
+        "id": "wdnsLdYFkOxT"
       },
       "outputs": [],
       "source": [
-        "class empresa:\n",
-        "   def __init__(self, funcionario, funcao ):\n",
-        "      self.funcionário = funcionario\n",
-        "      self.funcao = funcao\n",
+        "class Pessoa:\n",
         "\n",
-        "   def registro(self):\n",
-        "      n=0\n",
-        "      n+=1\n",
-        "      print('-'*30,'\\n inscrição do dia:', date.today())\n",
-        "      print('colaborador:', self.funcionario, '\\nfunção:', self.funcao, '\\n',n , 'inscrição de presença \\n','*' *30)\n",
+        "  def __init__(self, nome, altura, idade ):\n",
+        "    self.nome = nome\n",
+        "    self._altura = altura\n",
+        "    self.idade = idade\n",
         "\n",
-        "porteiro = empresa('Gilson Bastos', 'gerente')\n",
-        "print(' '*2,'>função de porteiro<')\n",
-        "porteiro.inscrição()\n",
+        "  def get_nome(self):\n",
+        "    return self.nome\n",
         "\n",
-        "segurança = empresa('Gilson Bastos', 'gerente')\n",
-        "print('>função de segurança<')\n",
-        "segurança .inscrição()\n",
+        "  def get_altura(self):\n",
+        "    return self.altura\n",
         "\n",
-        "cozinheiro = empresa('Gilson Bastos', 'gerente')\n",
-        "print(' '*3,'>função de cozinheiro<')\n",
-        "cozinheiro .inscrição()"
+        "  def get_idade(self):\n",
+        "    return self._idade\n",
+        "\n",
+        "  def set_altura(self, true):\n",
+        "    if self.altura >= 1:\n",
+        "      print(true)\n",
+        "\n",
+        "  def set_idade(self, v):\n",
+        "    self._idade = v\n",
+        "\n",
+        "\n",
+        "pessoa = pessoa('carlos aguiar', '45')\n",
+        "pessoa.get_nome()\n",
+        "pessoa.get_altura()\n",
+        "pessoa.get_idade()"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Crie uma classe de sua preferência com, no mínimo, uma variável, um método e um incremento. Depois, desenvolva três ou mais objetos para testar o código.\n"
+        "Crie uma classe e insira nela, no mínimo, dois atributos, os quais devem ter um método\n",
+        " acessor ( get ) e um método modificador ( set ) para cada. Defina um objeto para cada atributo\n",
+        " e elabore um construtor para criar alguma regra.\n",
+        "\n",
+        "A atividade pode ser realizada em qualquer linguagem de programação ou apenas utilizando algoritmos.\n"
       ],
       "metadata": {
-        "id": "aAnSyhvJi3ih"
+        "id": "HPVAnJu7dpbH"
       }
     }
   ]
