--- a/1_Exerc_Man_Dados.ipynb
+++ b/1_Exerc_Man_Dados.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1_Exerc_Man_Dados.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPb5VE2L5bnm9L3k3bltnF1",
+      "authorship_tag": "ABX9TyPNMNsH9meoMACQsNfgCjSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,9 @@
         "\n",
         "O botão de pesquisa do google permite acessar qualquer tipo de pesquisa com facilidade.\n",
         "\n",
-        "<input id=\"input\" type=\"search\" autocomplete=\"off\" spellcheck=\"false\" role=\"combobox\" placeholder=\"Pesquise no Google ou digite um URL\" aria-live=\"polite\">\n",
+        "<input id=\"input\" type=\"search\" autocomplete=\"off\" spellcheck=\"false\" role=\"combobox\" \n",
+        "placeholder=\"Pesquise no Google ou digite um URL\" \n",
+        "aria-live=\"polite\">\n",
         "\n",
         "\n",
         "\n",
@@ -68,7 +70,9 @@
         "O botão de pesquisa do YouTube permite acessar qualquer vídeo disponível no servidor.\n",
         "\n",
         "\n",
-        "<input id=\"search\" autocapitalize=\"none\" autocomplete=\"off\" autocorrect=\"off\" name=\"search_query\" tabindex=\"0\" type=\"text\" spellcheck=\"false\" placeholder=\"Pesquisar\" aria-label=\"Pesquisar\" role=\"combobox\" aria-haspopup=\"false\" aria-autocomplete=\"list\" class=\"gsfi ytd-searchbox\" dir=\"ltr\" style=\"border: none; padding: 0px; margin: 0px; height: auto; width: 100%; outline: none;\">\n",
+        "<input id=\"search\" autocapitalize=\"none\" autocomplete=\"off\" autocorrect=\"off\" name=\"search_query\" tabindex=\"0\" type=\"text\"\n",
+        " spellcheck=\"false\" placeholder=\"Pesquisar\" aria-label=\"Pesquisar\" role=\"combobox\" aria-haspopup=\"false\" aria-autocomplete=\"list\" \n",
+        " class=\"gsfi ytd-searchbox\" dir=\"ltr\" style=\"border: none; padding: 0px; margin: 0px; height: auto; width: 100%; outline: none;\">\n",
         "\n",
         "\t\tPermite acessar qualquer tipo de assunto com facilidade\n",
         "\n",
