--- a/Operações_BD.ipynb
+++ b/Operações_BD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNR7YL7dNIRDsUJhkX47s/m",
+      "authorship_tag": "ABX9TyPaJ2Dj/kwVJ4tHRMlUY19o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,26 +30,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0J2gocJrsLz3"
+        "id": "OD9-hXlSs22N"
       },
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "De acordo com os conceitos estudados, exiba os resultados das operações selecionadas, projeto, união,\n",
-        " intersecção e diferença. Siga as instruções com base na tabela apresentada em anexo.\n",
-        "\n",
-        "1- como informações apenas dos alunos aprovados. A aprovação é acima de 7,0;\n",
-        "2- Exiba as informações dos alunos do primeiro ano com nota maior ou igual a 8,0;\n",
-        "3- Exiba apenas os nomes e as notas dos alunos;\n",
-        "4- Crie uma tabela PROFESSOR que apresenta apenas o primeiro e último nome do professor;\n",
-        "5- Crie uma tabela ALUNO com o primeiro e último nome de cada;\n",
-        "6- Mostre o resultado da união entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR;\n",
-        "7- Exiba o resultado da intersecção entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR;\n",
-        "8- Exiba o resultado da diferença entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR.\n",
-        "\n",
         "1- Alunos Aprovados = Select Nota do Aluno while Nota>7;\n",
         "\n",
         "2- Select * From Aluno While NOTA>=8;\n",
@@ -73,9 +57,39 @@
         "\n",
         "\n",
         "8- Select * de Aluno Onde Aluno Not In (Select * de Professor)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "CR_2sGmls78p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "RYmOn4M7s88D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "De acordo com os conceitos estudados, exiba os resultados das operações selecionadas, projeto, união,\n",
+        " intersecção e diferença. Siga as instruções com base na tabela apresentada em anexo.\n",
+        "\n",
+        "1- como informações apenas dos alunos aprovados. A aprovação é acima de 7,0;\n",
+        "2- Exiba as informações dos alunos do primeiro ano com nota maior ou igual a 8,0;\n",
+        "3- Exiba apenas os nomes e as notas dos alunos;\n",
+        "4- Crie uma tabela PROFESSOR que apresenta apenas o primeiro e último nome do professor;\n",
+        "5- Crie uma tabela ALUNO com o primeiro e último nome de cada;\n",
+        "6- Mostre o resultado da união entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR;\n",
+        "7- Exiba o resultado da intersecção entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR;\n",
+        "8- Exiba o resultado da diferença entre a tabela ALUNO(PNome, UNome) e a tabela PROFESSOR."
       ],
       "metadata": {
-        "id": "h481EScAsR_d"
+        "id": "r0t7Rur3tBub"
       }
     }
   ]
