--- a/SegurançaBD.ipynb
+++ b/SegurançaBD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2N6gW1D6zx/EN3SIrmTaB",
+      "authorship_tag": "ABX9TyMP+uG/eBtaYi66ofZjdvmR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CBpnm_f0wNFB"
+        "id": "HWiB_SokSI_X"
       },
       "outputs": [],
       "source": []
@@ -38,28 +38,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Após uma varredura rápida no sistema da sua empresa, foi identificada a necessidade de melhorar a segurança dos dados. \n",
-        "Por isso, você deve desenvolver um novo banco de dados. \n",
-        "Explique quais são os pilares da segurança de dados que devem ser seguidos.\n",
+        "Uma empresa está sofrendo ataques que impactam diretamente a sua segurança. Então, ela precisa\n",
+        "atualizar como senhas de todos os seus funcionários. Cite pelo menos três métodos para melhorar\n",
+        "essas senhas.\n",
         "\n",
-        "Integridade:\n",
         "\n",
-        "A integridade é a garantia de que os dados alterados no sistema serão retidos em sua forma original.\n",
-        "Esse componente está intrinsecamente relacionado ao controle das modificações do sistema e à preservação total do ciclo de vida dos dados, \n",
-        "que se baseia na origem, manutenção e destruição.\n",
         "\n",
-        "Disponibilidade:\n",
+        "Primeiro Método:\n",
+        "Palavras do nosso dia-a-dia, são facilmente descobertas por softwares espiões.\n",
         "\n",
-        "A disponibilidade garante que os dados estejam sempre disponíveis para fins legais.\n",
-        "Portanto, apenas os indivíduos que foram devidamente aprovados terão acesso ao sistema em qualquer momento.\n",
+        "Segundo Método:\n",
+        "Não se deve usar palavras e/ou números associados ao usúario.\n",
         "\n",
-        "Confiabilidade:\n",
-        "\n",
-        "A confiabilidade exige a imposição de restrições sobre quem tem acesso aos dados em questão.\n",
-        "Então, apenas indivíduos confiáveis com uma necessidade legítima de alterar os dados, terão acesso a eles se necessário."
+        "Terceiro Método:\n",
+        "Fazer alteração de senhas em intervalos de 90 dias."
       ],
       "metadata": {
-        "id": "m-WHF5rawNma"
+        "id": "li0PLj7QSKEb"
       }
     }
   ]
