--- a/Express.ipynb
+++ b/Express.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmVS2h7+cYpnbsLK6X66aM",
+      "authorship_tag": "ABX9TyPldOtRvnbT56xoc1ChJJB3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,8 @@
       },
       "outputs": [],
       "source": [
-        "const Motorola = requer('motorola')\n",
-        "aplicativo const = expresso()\n",
+        "const motorola = requer('motorola')\n",
+        "aplicativo const = motorola()\n",
         "\n",
         "app.get('/',(req, res) => {\n",
         "    res.send('Olá motorola')\n",
